@@ -28,6 +28,12 @@
         "category": "css"
     },
     {
+        "name": "CSS Shapes Level 1",
+        "url": "http://www.w3.org/TR/css-shapes-1/",
+        "keywords": ["css shapes", "shapes"],
+        "category": "css"
+    },
+    {
         "name": "DOM",
         "url": "https://dom.spec.whatwg.org",
         "keywords": ["dom", "dom4"],
@@ -174,6 +180,17 @@
         "webkit-url": "https://bugs.webkit.org/show_bug.cgi?id=138967",
         "specification": "Streams",
         "comment": "The ReadableStream and ReadableStreamReader interfaces are available but not functional."
+    },
+    {
+        "name": "Shape outside for floats",
+        "status": {
+            "status": "In Development",
+            "enabled-by-default": true
+        },
+        "url": "http://www.w3.org/TR/css-shapes-1/",
+        "specification": "CSS Shapes Level 1",
+        "description": "CSS Shapes describe geometric shapes for use in CSS. For Level 1, CSS Shapes can be applied to floats.",
+        "comment": "The implementation is feature complete and shipping, but is -webkit prefixed."
     }
     ]
 }
